--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -14,16 +14,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ffc\n",
+    "# Fred's fast.ai cookbook\n",
     "\n",
-    "> Fred's Fast.ai Cookbook"
+    "> My personal \"cookbook\" of fast.ai recipes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "## What is this project?\n",
+    "\n",
+    "Inspired by Zach Muller's [Walk with fastai](walkwithfastai.com), this project aims to collect notebooks, snippets, ideas and learnings of my personal [fastai journey](/blog)."
    ]
   },
   {
@@ -38,57 +40,25 @@
    "metadata": {},
    "source": [
     "```sh\n",
-    "pip install ffc\n",
+    "pip install -e '.[dev]'\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## How to use"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fill me in please! Don't forget code examples:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
