--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fred's fast.ai cookbook\n",
+    "# FFC\n",
     "\n",
     "> My personal \"cookbook\" of fast.ai recipes"
    ]
@@ -25,7 +25,7 @@
    "source": [
     "## What is this project?\n",
     "\n",
-    "Inspired by Zach Muller's [Walk with fastai](walkwithfastai.com), this project aims to collect notebooks, snippets, ideas and learnings of my personal [fastai journey](/blog)."
+    "Inspired by Zach Muller's [Walk with fastai](walkwithfastai.com), **Fred's fast.ai cookbook** aims to collect notebooks, snippets, ideas and learnings of my personal [fastai journey](/blog)."
    ]
   },
   {
@@ -43,6 +43,38 @@
     "pip install -e '.[dev]'\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Project structure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This project is built on [nbdev](nbdev.fast.ai). The **nbs** folder is where the content is produced:\n",
+    "\n",
+    "* **nbs/(root)**: quarto config files\n",
+    "* **nbs/blog**: blog content\n",
+    "* **nbs/course22**: My personal notes on Practical Deep Learning for Coders 2022 lessons \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nbdev automatically creates the **proc**, **doc** and **ffc** folders.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
