feat:logo added
- added logo
- added better introduction

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FFC\n",
+    "# The FFC lib\n",
     "\n",
     "> My personal \"cookbook\" of fast.ai recipes"
    ]
@@ -25,7 +25,9 @@
    "source": [
     "## What is this project?\n",
     "\n",
-    "Inspired by Zach Muller's [Walk with fastai](walkwithfastai.com), **Fred's fast.ai cookbook** aims to collect notebooks, snippets, ideas and learnings of my personal [fastai journey](/blog)."
+    "**FFC** (Fred's fastai cookbook) is not your usual library.  It does not intend to fill a gap in the development ecosystem, its purpose is to fill a gap in my own brain.\n",
+    "\n",
+    "Inspired by Zach Muller's [Walk with fastai](walkwithfastai.com), **FFC** aims to collect notebooks, snippets, ideas and learnings of my personal [fastai journey](/blog)."
    ]
   },
   {
