--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -59,7 +59,8 @@
    "source": [
     "This project is built on [nbdev](nbdev.fast.ai). The **nbs** folder is where the content is produced:\n",
     "\n",
-    "* **nbs/(root)**: quarto config files\n",
+    "* **nbs/(root)**: nbdev and quarto config files\n",
+    "  * custom.css: my tweaks on the default *cosmo* website theme\n",
     "* **nbs/blog**: blog content\n",
     "* **nbs/course22**: My personal notes on Practical Deep Learning for Coders 2022 lessons \n",
     " "
