--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -34,8 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "def foo(): pass"
+    "# #| export\n",
+    "# def foo(): pass"
    ]
   },
   {
@@ -51,7 +51,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   }
