--- a/nbs/blog/posts/dissertation/intro.qmd
+++ b/nbs/blog/posts/dissertation/intro.qmd
@@ -1,6 +1,7 @@
 ---
 title: "The emergence of an Information Bottleneck Theory of Deep Learning"
 description: "Chapter 1"
+subtitle: "‘As far as the laws of mathematics refer to reality. they are not certain, and as far as they are certain, they do not refer to reality.’ --- Albert Einstein"
 date: "2022-09-29"
 format:
     html: 
@@ -24,15 +25,12 @@ In his acceptance speech for the Test-of-Time award in NeurIPS 2017,[^1] Ali Rah
 
 
 > ‘We are building systems that govern healthcare
-and mediate our civic dialogue. We would influence elections. I would like to live in a society whose systems are built on top of veriable, rigorous, thorough knowledge and not on alchemy.’
->
-> --- Rahimi
+and mediate our civic dialogue. We would influence elections. I would like to live in a society whose systems are built on top of veriable, rigorous, thorough knowledge and not on alchemy.’ --- Rahimi
+
 
 The next day, Yann LeCun[^3] responded: 
 
->‘Criticising an entire community for practising “alchemy”, simply because our current theoretical tools have not caught up with our practice is dangerous.’ 
->
-> --- LeCun
+>‘Criticising an entire community for practising “alchemy”, simply because our current theoretical tools have not caught up with our practice is dangerous.’  --- LeCun
 
 
 Both researchers, at least, agree upon one thing: the practice of machine learning has outpaced its theoretical development. That is certainly a research opportunity.
