--- a/nbs/blog/posts/dissertation/ai.qmd
+++ b/nbs/blog/posts/dissertation/ai.qmd
@@ -16,6 +16,7 @@ categories:
   - Hume
   - Dennet
   - strange inversion
+Draft: True
 ---
 
 This chapter defines artificial intelligence, presents the epistemological differences of intelligent agents in history, and discusses their consequences to machine learning theory.
