--- a/nbs/blog/posts/2022-10-11/index.qmd
+++ b/nbs/blog/posts/2022-10-11/index.qmd
@@ -65,37 +65,26 @@ The [Practical Deep Learning for Coders](https://course.fast.ai/) course has a t
 --- give the example pictures this token and add to the model
 - Dreambooth takes a not so used token and finetune just this token
 
-An annotated copy of Advanced Potion-Making book belonged to Severus Snape while a Hogwarts student.
-:::
+## How it works
+- We will use a different explanation to what is commonly explained
 
-### Why build a cookbook?
- A cookbook enables reproducibility, but as important... it allows _you_ to come back to your work in a few months and understand what you did. **It is a gift for your future self.**
+- Imagine a magic api `f``...
+- img X_1-> `f` -> p_isDigit(X_1)=0.98
+- img X_2-> `f` -> p_isDigit(X_2)=0.4
+- img X_2-> `f` -> p_isDigit(X_2)=0.02
+
+- if you have this magic api, you can use it to create images.
+- if we change a pixel, what is the probability now? 
+- we calculated the gradient of the probability of X_3 being a hand written digit:
+$\frac{\Lambda p_{\text{isDigit}}(X_3)}{\Lambda X_3}$
+- instead of using the gradient to change the model, we are changing the input
+-- pixel by pixel is the finite differencing -> very slow
+-- instead, we could just use `f.backward()` and get X_3.grad
+
 
 ```{mermaid}
 flowchart LR
   A(Watch lecture) --> B(Run lesson notebook)
-  B --> C(Reproduce)
+  B --> C(Reproduce results)
   C --Different dataset--> C
-  C --> D(Share learnings)
-  D:::someclass
-  classDef someclass fill:#f96;
-
 ```
-Besides, when you share your learnings you need to structure your thought and that makes you check for gaps in your understanding and solidifies what you have learned.
-
-### How to build a cookbook?
-The best way to document your fastai learnings is using [nbdev](nbdev.fast.ai), which is the development tool used to build and document `fast.ai` lib itself. That is how this `Fred's fast.ai cookbook` was made. You can just fork [my repo](https://github.com/fredguth/ffc) or follow the [nbdev tutorial](https://nbdev.fast.ai/tutorials/tutorial.html) (that is what I did).
-
-
-
-
-draft: false
----
-
-The [Practical Deep Learning for Coders](https://course.fast.ai/) course has a top-down approach to teaching.  Let's **not** *start from the basics*, but from our goals. In the first lesson, you learn how to build a classifier that would be science fiction in 2015. Neat! Equally important, thought, is what is implicit: a requirement for a [top-down approach to learning](https://forums.fast.ai/t/learning-strategy-for-top-down-approach/66173):
-
-:::{.column-margin  .callout-tip}
-## doc(_function_)
-While running the lesson notebook, use `doc(fn)` to access the _function_'s documentation.
-:::
-
