--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -62,7 +62,7 @@
     "* **nbs/(root)**: nbdev and quarto config files\n",
     "  * custom.css: my tweaks on the default *cosmo* website theme\n",
     "* **nbs/blog**: blog content\n",
-    "* **nbs/course22**: My personal notes on Practical Deep Learning for Coders 2022 lessons \n",
+    "<!-- * **nbs/course22**: My personal notes on Practical Deep Learning for Coders 2022 lessons  -->\n",
     " "
    ]
   },
@@ -85,6 +85,15 @@
    "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
