--- a/nbs/dissertation/ai.qmd
+++ b/nbs/dissertation/ai.qmd
@@ -13,6 +13,8 @@ categories:
   - Dennet
   - strange inversion
   - Turing
+metadata-files: 
+  - diss.yml
 ---
 
 This chapter defines artificial intelligence, presents the epistemological differences of intelligent agents in history, and discusses their consequences to machine learning theory.
